@@ -47,6 +47,8 @@ Version 1.4.11 - SVN
   - Change default Selection List Style to Indented.
   - Added "preselected" query argument to mailbox list.
   - Added mailbox_display_buttons hook.
+  - Removed "Include CCs when Forwarding Messages", which had no functionality
+    whatsoever.
 
 Version 1.4.10a - 10 May 2007
 -----------------------------
